24-03-08 | 박검지 | 코스 저장까지 완성

--- a/src/main/resources/templates/thymeleaf/aicc/saveCourse.html
+++ b/src/main/resources/templates/thymeleaf/aicc/saveCourse.html
@@ -5,6 +5,8 @@
 
 <body>
 	<div th:replace="~{nav/nav::nav}"></div>
+	                  	               	<!-- 예약 버튼 -->
+				    <div th:replace="~{alert/pay_modal::div}"> </div>   
 	<div class="container px-md-5">
 	<h4 class="text-center my-5">코스 저장하기</h4>
 		<div class="row mx-3 mx-md-5 justify-content-center">
@@ -18,8 +20,6 @@
 						<span class="rounded-4 p-3 bg-mainbg text-white">Day-1</span>
 					</h3>
 						</div>
-				
-				
 			</div>
 			</div>
 			<!-- 1일차 데이터 -->
@@ -84,8 +84,6 @@
 			</div>
 			
 
-
-
 			</div>
 			<form action="cours_Save_insert" method="post" id="myForm">
 			<div class="row">
@@ -141,7 +139,19 @@
 					<input type="hidden" name="memberId" th:value="${session.Member_Id}" />
 					<input type="hidden" name="day" th:value="${day}" />
 					<input type="hidden" name="img" th:value="${aicc.get(0).getEvent_thumbnail()}" />
+					<input type="hidden" class="amountValue" name="amount" value="" />
+					
 					<div class="col-12 mx-auto mt-4 text-end">
+					<button type="submit"
+						class="btn btn-main rounded-pill btn-map-step hstack"
+						data-bs-toggle="modal" 
+						data-bs-target="#feed_del_Modal" 
+						data-bs-placement="bottom" 
+						data-bs-custom-class="custom-tooltip"
+						data-bs-title="This top tooltip is themed via CSS variables.">
+						<img src="../img/mypage/coin.png" width="36" height="36" class="me-2" alt="" />
+							코스 저장하고 예약하기
+					</button>
 						<button type="submit" class="btn btn-main "> 코스 등록</button>
 					</div>
 					</div>
@@ -304,6 +314,24 @@
 		var distance;
 
 		var totalDistance = 0; // 총 거리를 저장할 변수를 초기화합니다.
+	    var stayPay = [
+	         90000,100000,110000,120000,130000,150000
+	      ]
+	    var foodPay =[
+	         20000,15000,30000,40000,50000,60000
+	      ]
+	   	var beveragePay =[
+	         20000,15000,16000,30000,25000,19500 
+	      ]
+		
+     	var randomNumber = Math.floor(Math.random() * 6) + 1;
+	    var amount = 0; // 예상 금액 초기화
+		var discount = 0; // 할인 금액 초기화
+	    var oil = 0; // 기름값 초기화
+	    var stay = stayPay[randomNumber]; // 숙소 금액
+	    var food = foodPay[randomNumber]; // 맛집 금액
+	    var beverage = beveragePay[randomNumber]; // 카페 (음료) 금액
+		
 
 		var subtotalDistance = 0;
 		for (var i = 0; i < positions.length; i++) {
@@ -326,6 +354,16 @@
 			displayCircleDot(positions[i].latlng, distance);
 			totalDistance += distance;
 			
+			// 예상금액 //
+			oil = Math.round((totalDistance / 1000) * 170); // oil 값 in
+			//document.querySelector('.oil').innerText = oil+"원"; // oil 값 out test
+			amount = oil + stay + food + beverage;
+			discount = amount-20000;
+			
+			document.querySelector('.amount').innerText = amount.toLocaleString()+"원"; // 최종 금액 out
+			document.querySelector('.amount2').innerText = amount.toLocaleString()+"원"; // 최종 금액 out
+			document.querySelector('.discount').innerText = discount.toLocaleString()+"원"; // 할인 금액 out
+			document.querySelector('.amountValue').value = amount;
 
 		}
 
