--- a/src/main/resources/templates/footer/footer.html
+++ b/src/main/resources/templates/footer/footer.html
@@ -26,13 +26,13 @@
 		</ul>
 		<ul class="footer-menu">
 			<li><a href="home">홈</a></li>
-			<li><a href="feed">피드</a></li>
 			<li><a href="aicc">AI 돋보기</a></li>
-			<li><a href="band">밴드</a></li>
+			<li><a href="band">동행</a></li>
 			<li><a href="info">여행정보</a></li>
 			<li><a href="map">지도</a></li>
+			<li><a href="feed">피드</a></li>
 		</ul>
-		<p>&COPY; green computer | 16th gajo</p>
+		<p>&COPY; green computer | 16th merge?is merger</p>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
