--- a/src/main/resources/templates/thymeleaf/map/map.html
+++ b/src/main/resources/templates/thymeleaf/map/map.html
@@ -385,6 +385,7 @@
          ]
       
         var randomNumber = Math.floor(Math.random() * 6) + 1;
+       randomNumber += 1; 
        var amount = 0; // 예상 금액 초기화
       var discount = 0; // 할인 금액 초기화
        var oil = 0; // 기름값 초기화
