insert 와 동시에 Course_num 받아오는 작업 진행 중

--- a/src/main/resources/templates/alert/pay_modal.html
+++ b/src/main/resources/templates/alert/pay_modal.html
@@ -47,7 +47,7 @@
 									<input type="hidden" class="" value="" name="amount"/>
 
 								
-								<span class="f16 d-block my-3 px-5">Carrier가 추천하는 코스입니다!</span>
+								<span class="f16 d-block my-3 px-5 courseContentDisplay"></span>
 
 									<!-- 	<p class="px-3 mb-1 pb-1">
 											<b>여행 지역 </b> <span class="text-black mx-2 ">|</span> <span
@@ -62,11 +62,12 @@
 								
 								
 								<span><b
-												class="text-pink d-block f17 amount2 fw-light text-decoration-line-through"></b></span>
+												class="text-pink d-block f17 amountDisplay fw-light text-decoration-line-through"></b></span>
 										
-										<div class="hstack d-flex justify-content-center text-center">
+										<div class="hstack d-flex justify-content-center text-center ">
                         				<div class="btn btn-sm btn-light rounded-pill my-2 f14">지금 바로 결제 시</div>
-                        				<span><b class="ms-2 text-pink f20 discount"></b></span>
+                        				<span><b class="ms-2 text-pink f20 discountDisplay"></b></span>
+                        				<span class="courseNum"></span>
                         			</div>
 								</div>
 							</div>
