--- a/src/main/resources/templates/thymeleaf/aicc/saveCourse.html
+++ b/src/main/resources/templates/thymeleaf/aicc/saveCourse.html
@@ -139,7 +139,10 @@
 					<input type="hidden" name="memberId" th:value="${session.Member_Id}" />
 					<input type="hidden" name="day" th:value="${day}" />
 					<input type="hidden" name="img" th:value="${aicc.get(0).getEvent_thumbnail()}" />
-					<input type="hidden" class="discountValue" name="amount" value="" />
+					<input type="hidden" class="discountValue" id="discount" name="discount" value="" />
+					<input type="hidden" class="amountValue" id="amount" name="amount" value="" />
+					<span class="amount text-white"></span>
+					<span class="discount text-white"></span>
 
 					<div class="col-12 mx-auto mt-4 text-end">
 					<button type="button"
@@ -364,10 +367,8 @@
 			discount = amount-20000;
 			
 			document.querySelector('.amount').innerText = amount.toLocaleString()+"원"; // 최종 금액 out
-			document.querySelector('.amount2').innerText = amount.toLocaleString()+"원"; // 최종 금액 out
 			document.querySelector('.amountValue').value = amount;
 			document.querySelector('.discount').innerText = discount.toLocaleString()+"원"; // 할인 금액 out
-			document.querySelector('.discount2').innerText = discount.toLocaleString()+"원"; // 할인 금액 out
 			document.querySelector('.discountValue').value = discount; // 할인 금액 out
 
 		}
@@ -398,49 +399,51 @@
 $(document).ready(function() {
     // #btn-pay 버튼을 클릭했을 때의 동작
     $("#btn-pay").click(function() {
-        // 코스 명과 코스 내용 가져오기
+        // 코스 명 가져오기
         var courseName = $("#Course_name").val();
         var courseContent = $("#Course_content").val();
+        var amount = $("#amount").val();
+        var discount = $("#discount").val();
         var formattedAmount = amount.toLocaleString();
         var formattedDiscount = discount.toLocaleString();
         
         // 폼 데이터 가져오기
         var formData = $("#myForm").serialize();
-        // 코스 명과 코스 내용을 formData에 추가
+        
+        // 코스 명을 formData에 추가
         formData += "&courseName=" + courseName;
         formData += "&courseContent=" + courseContent;
         formData += "&amount=" + amount;
         formData += "&discount=" + discount;
-
-        // 코스 명과 코스 내용을 표시할 요소에 값을 넣음
+        
+        // 코스 명을 표시할 요소에 courseName 값을 넣음
         $(".courseNameDisplay").text(courseName);
         $(".courseContentDisplay").text(courseContent);
-        $(".amountDisplay").text(formattedAmount + "원");
+
+        document.querySelector('.amountDisplay').innerText = amount.toLocaleString()+"원";
+       
         $(".discountDisplay").text(formattedDiscount + "원");
         
-        // 서버로 데이터 전송
+        document.querySelector('.courseNameValue').value = courseName;
+        document.querySelector('.discountValue').value = discount;
+        
+        // 첫 번째 AJAX 요청: 데이터 저장
         $.ajax({
             type: "POST",
             url: "cours_Save_insert",
             data: formData,
             success: function(response) {
-                // 성공적으로 서버에 데이터를 전송한 경우의 동작
-                console.log("서버로 데이터 전송 성공!");
-                console.log("서버 응답: ", response);
-                
-                var courseNum = response.courseNum;
-                $(".courseNum").text(courseNum);
-                
-                // 모달 창 열기
-                $('#feed_del_Modal').modal('show');
-                
-                
-                // 코스 추가 후 리디렉션
-                window.location.href = "/cours_Save_update";
+                // 데이터 저장에 성공한 경우
+                console.log("데이터 저장 성공!");
+                // 두 번째 AJAX 요청: 저장된 코스의 ID 가져오기
+
+                 $('#feed_del_Modal').modal('show');
+                console.log(response.courseNum);
+                  
             },
             error: function(xhr, status, error) {
-                // 서버에 데이터 전송이 실패한 경우의 동작
-                console.error("서버로 데이터 전송 실패!");
+                // 데이터 저장에 실패한 경우
+                console.error("데이터 저장 실패!");
                 console.error("에러: ", error);
             }
         });
@@ -448,6 +451,7 @@ $(document).ready(function() {
 });
 </script>
 
+	
 	
 	
 </body>
