--- a/src/main/resources/templates/thymeleaf/aicc/saveCourse.html
+++ b/src/main/resources/templates/thymeleaf/aicc/saveCourse.html
@@ -141,6 +141,7 @@
 					<input type="hidden" name="img" th:value="${aicc.get(0).getEvent_thumbnail()}" />
 					<input type="hidden" class="discountValue" id="discount" name="discount" value="" />
 					<input type="hidden" class="amountValue" id="amount" name="amount" value="" />
+					
 					<span class="amount text-white"></span>
 					<span class="discount text-white"></span>
 
@@ -391,19 +392,15 @@
 		}
 	</script>
 	
-	
-	
 
 <!-- 비동기로 pay 모달 열기 -->
 <script>
 $(document).ready(function() {
     // #btn-pay 버튼을 클릭했을 때의 동작
     $("#btn-pay").click(function() {
-        // 코스 명 가져오기
         var courseName = $("#Course_name").val();
         var courseContent = $("#Course_content").val();
-        var amount = $("#amount").val();
-        var discount = $("#discount").val();
+
         var formattedAmount = amount.toLocaleString();
         var formattedDiscount = discount.toLocaleString();
         
@@ -420,12 +417,8 @@ $(document).ready(function() {
         $(".courseNameDisplay").text(courseName);
         $(".courseContentDisplay").text(courseContent);
 
-        document.querySelector('.amountDisplay').innerText = amount.toLocaleString()+"원";
+        document.querySelector('.courseNameValue').value = courseName; // 코스명 out
        
-        $(".discountDisplay").text(formattedDiscount + "원");
-        
-        document.querySelector('.courseNameValue').value = courseName;
-        document.querySelector('.discountValue').value = discount;
         
         // 첫 번째 AJAX 요청: 데이터 저장
         $.ajax({
@@ -435,8 +428,7 @@ $(document).ready(function() {
             success: function(response) {
                 // 데이터 저장에 성공한 경우
                 console.log("데이터 저장 성공!");
-                // 두 번째 AJAX 요청: 저장된 코스의 ID 가져오기
-
+    		    
                  $('#feed_del_Modal').modal('show');
                 console.log(response.courseNum);
                   
@@ -449,6 +441,7 @@ $(document).ready(function() {
         });
     });
 });
+
 </script>
 
 	
