--- a/src/main/resources/templates/thymeleaf/home/home.html
+++ b/src/main/resources/templates/thymeleaf/home/home.html
@@ -22,7 +22,7 @@
 							<div class="row flex-column-reverse flex-lg-row m-2">
 								<!-- 캐러셀 텍스트 영역 -->
 								<div class="col-12 col-lg-4 col-xl-5 d-flex d-lg-block p-0">
-									<div class="crousel_textArea">
+									<div class="crousel_textArea bg-0">
 										<em th:text="${info.getCourse_Name()}" class="">긴 겨울밤 낭만적인 시간</em>
 									<br /><p class="mt-4 mb-1"><span th:text="|#${info.getCourse_Interest()}|" class="  "></span> <span th:text="|#${info.getCourse_Area()}|" class="  "></span> <span th:text="|#${info.getCourse_thema()}|" class="  "></span></p>
 										<!-- <strong th:text="${info.getEvent_name()}"> 겨울밤을 빛내주는 전국 야경 명소</strong> -->
@@ -279,7 +279,7 @@
 				</div>
 				<!-- 캐러셀 버튼 end -->
 				<!-- 캐러셀 버튼 [M] -->
-				<div class="d-lg-none d-flex h-100 w-100 z-5">
+				<div class="d-lg-none d-flex h-100 w-100 z-5 mt-3">
 					<button class="carousel-control-prev carousel-control-prev-m justify-content-start" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
 					<span class="w-75" aria-hidden="true"><i class="fi fi-sr-angle-left f22 text-dark z-5"></i>
 					</span><span class="visually-hidden ">Previous</span>
@@ -302,7 +302,7 @@
 	<div class="pt-2 rounded-1 m-5 mt-2 bg-main bg-opacity-25">
                 <div class=" row bg-white p-2">
                     
-                    <div class="col-12 col-lg-5 ms-5 bg-white rounded-1 p-3">
+                    <div class="col-12 col-md-6 ms-5 bg-white rounded-1 p-3">
                     <h3 class="mt-4">여행 코스 짜기 고민 되시나요?</h3>
                     
                     <p class="mb-5">지금 바로 캐리어와 함께해요</p>
@@ -310,7 +310,7 @@
                             <span class="btn btn-main mt-4">캐리어 참여하기</span>
                         </a>
                     </div>
-                    <div class="col-12 col-lg-6 text-end bg-white">
+                    <div class="col-12 col-md-4 text-end bg-white">
                         <img src="https://english.visitkorea.or.kr/static/front/images/ico/ico_travelBanner_364x280.png" alt="" style="width: 300px;" class="bg-white p-4 rounded-4 mb-5">
                     </div>
                 </div>
