--- a/src/main/resources/templates/thymeleaf/map/map.html
+++ b/src/main/resources/templates/thymeleaf/map/map.html
@@ -4,7 +4,7 @@
 <body class="overflow-hidden">
    <div th:replace="~{nav/nav::nav}"></div>
    <div class="loading-screen">
-        <div class="loading-message">로딩 중...</div>
+        <div class="loading-message clip-text">Road Trip</div>
     </div>
    <div class="map_wrapp">
       <!-- 맵 컨텐츠 전체를 감싸는 영역  -->
