--- a/src/main/resources/templates/thymeleaf/band/band.html
+++ b/src/main/resources/templates/thymeleaf/band/band.html
@@ -11,7 +11,7 @@
             <div class="container band_lnb_box pt-5">
                 <ul class="band_lnb_ul p-0 d-flex">
                     <li class="band_lnb_item active">나의 동행</li>
-                    <li class="band_lnb_item">채팅</li>
+                    <!-- <li class="band_lnb_item">채팅</li> -->
                 </ul>
             </div>
         </div>
@@ -45,11 +45,14 @@
         </div> <!-- join_band_wapper -->
 
         <!-- 밴드 추천 영역 -->
-        <div class="band_recomand_wrapper bg-main p-3">
+        <div id="band_recomand" class="band_recomand_wrapper bg-main p-3">
             <div class="container p-5">
 				<div class="row m-auto w-100 ">
 					<div class="col hstack justify-content-between">
 						<span class="f22 float-start band_recomand_txt">이런 동행은 어때요?</span> 
+					</div>
+					<div class="col pt-3 text-end">
+						<span class="band_recommend_refresh p-2 rounded-5 btn" onclick="func_bandRefresh()">새로운 동행 추천 받기 ></span>
 					</div>
 				</div>
 				<!-- 밴드 추천 리스트 -->
@@ -181,6 +184,12 @@
     </div>  <!-- band_wrapper -->
      <div th:replace="~{footer/robot::robot}"></div>
     <div th:replace="~{footer/footer::footer}"></div>
-
+	
+	<script>
+		function func_bandRefresh(){
+			location.reload();
+			window.location.href = "#band_recomand";
+		}
+	</script>
 </body>
 </html>
