24-03-11 | 박검지 | 주말간 작업 다시 머지

--- a/src/main/resources/templates/thymeleaf/Member/checkout.html
+++ b/src/main/resources/templates/thymeleaf/Member/checkout.html
@@ -67,12 +67,11 @@
 		paymentWidget.requestPayment({
 			orderId : orderId,
 			orderName : orderName,
-			successUrl : window.location.origin + "/success",
+			successUrl : window.location.origin + "/success?num="+courseNum,
 			failUrl : window.location.origin + "/fail",
 			customerEmail : customerEmail,
 			customerName : customerName,
 			customerMobilePhone : customerMobilePhone,
-			courseNum : courseNum,
 		});
 	});
 	</script>
