24-03-11 | 장창엽 | map- 여행코스 작업

--- a/src/main/resources/static/css/map.css
+++ b/src/main/resources/static/css/map.css
@@ -338,6 +338,16 @@ div.mapListItemBox{
 	width: 400px;
 
 }
+/* 맵 코스 리스트 출력 */
+div.mapCourseListBox{
+
+   height: calc( 100vh - 150px );
+	overflow : scroll !important;
+	height: calc( 100vh - 150px );
+	width: 400px;
+
+}
+
 
 /* 카카오 맵 스타일 */
 div#map {
@@ -394,23 +404,6 @@ div.map_mapSection {
 }
 
 
-.clip-text {
-  padding:10px;
-  background: url("https://media.giphy.com/media/eBtpLQVJeFEBx92VCy/giphy.gif");
-  background-size: cover;
-  background-position: center;
-  -webkit-background-clip: text;
-  color: #00000047; 
-  text-transform:uppercase;
-  font-size: 8rem;
-  font-weight: 900;
-  letter-spacing:1px;
-  user-select:none;
-      border-top: solid 10px #00000057;
-    border-bottom: solid 10px #00000057;
-  text-align:center;
-}
-
 /*************************** 
 	카카오 맵 api 오버레이 스타일
  **************************/
@@ -443,6 +436,7 @@ div#map,div#map2,div#map3 {
 div.map_mapSection {
    width: calc(100% - 350px);
 }
+
 .mapday1,.mapday2,.mapday3{
    position: fixed;   
    z-index: 5;
@@ -472,7 +466,9 @@ h3.pgj{
 	bottom: 25px;
 	right: 0;
 }  
-  
+
+
+
 @media screen and (max-width: 760px) {
   .showbtn {
     display: block;
@@ -484,4 +480,6 @@ h3.pgj{
  	display: none;
  }
 }
+
+
 
