--- a/src/main/resources/templates/thymeleaf/map/map_0221.html
+++ b/src/main/resources/templates/thymeleaf/map/map_0221.html
@@ -192,7 +192,7 @@
                  
                   <!-- 축제  리스트 출력 -->
                 <th:block th:if="${selectCategory.equals('event')}">
-	                <div class="indexMap_guide_iconBox py-5">
+	                <div class="indexMap_guide_iconBox">
 	                    <div class="map_guide_icon">
 	                        <ul class="map_guide_icon_list px-0">
 	                            <li class="map_guide_icon_item map_icon_near_trip ">관광지</li>
@@ -201,7 +201,7 @@
 	                            <li class="map_guide_icon_item map_icon_hotel ">숙박</li>
 	                            <li class="map_guide_icon_item map_icon_inside ">실내</li>
 	                            <li class="map_guide_icon_item map_icon_activity ">액티비티</li>
-	                            <li class="map_guide_icon_item map_icon_themepark on ">테마파크</li>
+	                            <li class="map_guide_icon_item map_icon_themepark">테마파크</li>
 	                            <li class="map_guide_icon_item map_icon_event on">축제</li>
 	                            <li class="map_guide_icon_item map_icon_recomand_thema ">산, 바다</li>
 	                            <li class="map_guide_icon_item map_icon_trip_course">여행코스</li>
